# telescope

./: .gitignore  README.md  install_dependancies.sh
Screen_Capture/: draw_display  draw_display.c  screen_cast_receiver.c  screen_cast_receiver_test2.c  screen_struc.h  screencap.c  screencap.h
docs/: dependancies.md  dependencies.md  install_dependancies.sh  rdma_nics.md
input_sim/: queue_safe.c
input_sim/client/: Makefile  client  client.c  wasd
input_sim/server/: server  server.c
latency tester/sender/: sender.ino
mouse_and_kb/: mouse_and_keyboard.c
rdma/: Makefile  client.c  common.c  common.h  server.c
src/: CMakeLists.txt  Makefile  rdma_config_rpi
src/Screen_Capture/: Makefile  client  draw_display.c  screen_cast_receiver.c  screencap.c  screencap.h
src/client/: Makefile  client-thread.c  client.cpp  client_no_shm.c  client_no_x11.c  client_rdma.c  client_rdma_b.c  input_xcb.c  input_xcb.h  receive_shm.h  telescope_client.c  test.c  ui.cpp  ui.hpp
src/common/: convert.c  ncp.c  queue_safe.c  queue_safe.h  rdma_common.c  rdma_common.h  rdma_extra.h
src/demo/: client.c  server.c
src/install/: install_deps.sh
src/legacy/: plan.md
src/login_manager/: Makefile  README.md  how to configure.md  login_client.c  login_server.go
src/server/: Makefile  draw_display_server.c  screencap.c  screencap.h  server.cpp  server_no_x11.c  server_rdma.c  tcp_server.c
src/test/: Makefile  (+2 more)
src/tlib/capture/: CMakeLists.txt  capture.cpp  capture.hpp  capture_base.h  capture_base.hpp  capture_x11.cpp  capture_x11.h  capture_x11.hpp  test_client.cpp
(+52 files in other folders)
